# Cuatro-en-linea-lenguaje-C

./: CMakeLists.txt  README.md
CuantroEnLinea/: CuatroEnLinea.c  CuatroEnLinea.h  Minimax.c  Minimax.h  ValidarGane.c  ValidarGane.h  main.c  matriz.c  matriz.h
