cmake_minimum_required(VERSION 3.17)
project(IC-4700-Lenguajes-2021-i-Programaci-n-Imperativa-en-C C)

set(CMAKE_C_STANDARD 99)

add_executable(IC-4700-Lenguajes-2021-i-Programaci-n-Imperativa-en-C CuatroEnLinea/main.c CuatroEnLinea/matriz.c CuatroEnLinea/ValidarGane.c CuatroEnLinea/CuatroEnLinea.c)